update adaptive news page

--- a/components/header.html
+++ b/components/header.html
@@ -2522,26 +2522,32 @@
                                 </li>
                                 <li class="navigation-sublist__item">
                                     <img class="navigation-sublist__item-img" src="/images/icons/money.svg" alt="">
-                                    <a class="navigation-sublist__item-link" href="">
-                                        О компании 2
+                                    <a class="navigation-sublist__item-link" href="/pages/aboutPage.html">
+                                        О компании
+                                    </a>
+                                </li>
+                                <li class="navigation-sublist__item">
+                                    <img class="navigation-sublist__item-img" src="/images/icons/money.svg" alt="">
+                                    <a class="navigation-sublist__item-link" href="/pages/newsPages/newsPage.html">
+                                        Новости общая
                                     </a>
                                 </li>
                                 <li class="navigation-sublist__item">
                                     <img class="navigation-sublist__item-img" src="/images/icons/key.svg" alt="">
-                                    <a class="navigation-sublist__item-link" href="">
-                                        О компании 3
+                                    <a class="navigation-sublist__item-link" href="/pages/newsPages/newsStockPage.html">
+                                        Акции и спецпредложения общая
                                     </a>
                                 </li>
                                 <li class="navigation-sublist__item">
                                     <img class="navigation-sublist__item-img" src="/images/icons/service.svg" alt="">
-                                    <a class="navigation-sublist__item-link" href="">
-                                        О компании 4
+                                    <a class="navigation-sublist__item-link" href="/pages/newsPages/newsNewProductPage.html">
+                                        Наши новинки общая
                                     </a>
                                 </li>
                                 <li class="navigation-sublist__item">
                                     <img class="navigation-sublist__item-img" src="/images/icons/spare.svg" alt="">
-                                    <a class="navigation-sublist__item-link" href="">
-                                        О компании 5
+                                    <a class="navigation-sublist__item-link" href="/pages/newsPages/newsVideosPage.html">
+                                        Видеообзоры
                                     </a>
                                 </li>
                             </ul>
