--- a/styles/components/components.scss
+++ b/styles/components/components.scss
@@ -575,9 +575,15 @@
     }
 }
 
-@media (min-width: 1201px) and (max-width: 1700px) {
+@media (min-width: 1401px) and (max-width: 1700px) {
     .wrapper {
-        width: 1000px;
+        width: 1300px;
+    }
+}
+
+@media (min-width: 1201px) and (max-width: 1400px) {
+    .wrapper {
+        width: 1100px;
     }
 }
 
