--- a/styles/accordion/accordion.css
+++ b/styles/accordion/accordion.css
@@ -1,1 +1,60 @@
-.accordion__header{display:flex;cursor:pointer;align-items:center;padding-right:22px;justify-content:space-between;background-color:rgba(0,0,0,0);transition:background-color .2s ease-out}.accordion__header::after{content:"";flex-shrink:0;width:1.25rem;height:1.25rem;margin-left:auto;background-size:1.25rem;background-repeat:no-repeat;transition:transform .2s ease-out;background-image:url(/images/service/arrow.svg)}.accordion__header:hover::after{filter:brightness(0) invert(1)}.accordion__content{cursor:default;padding:24px 20px 30px;background:#fff}.accordion__content__list{gap:20px;display:flex;flex-direction:column}.accordion__content__list__item{width:300px}.accordion__content__list__item-title{font-size:15px;font-weight:700;line-height:22px;color:#232323}.accordion__content__list__item-subtitle{font-size:12px;font-weight:400;line-height:18px;color:#575757}.accordion__content__list__item-link:hover .accordion__content__list__item-title{color:#248fec}.accordion__item_show .accordion__header::after,.accordion__item_slidedown .accordion__header::after{transform:rotate(-180deg)}.accordion__item:not(.accordion__item_show) .accordion__body{display:none}
+.accordion__header {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  padding-right: 22px;
+  justify-content: space-between;
+  background-color: transparent;
+  transition: background-color 0.2s ease-out;
+}
+.accordion__header::after {
+  content: "";
+  flex-shrink: 0;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-left: auto;
+  background-size: 1.25rem;
+  background-repeat: no-repeat;
+  transition: transform 0.2s ease-out;
+  background-image: url(/images/service/arrow.svg);
+}
+.accordion__header:hover::after {
+  filter: brightness(0) invert(1);
+}
+.accordion__content {
+  cursor: default;
+  padding: 24px 20px 30px;
+  background: #ffffff;
+}
+.accordion__content__list {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.accordion__content__list__item {
+  width: 300px;
+}
+.accordion__content__list__item-title {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 22px;
+  color: #000000;
+}
+.accordion__content__list__item-subtitle {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #575757;
+}
+.accordion__content__list__item-link:hover .accordion__content__list__item-title {
+  color: #248FEC;
+}
+
+.accordion__item_show .accordion__header::after,
+.accordion__item_slidedown .accordion__header::after {
+  transform: rotate(-180deg);
+}
+
+.accordion__item:not(.accordion__item_show) .accordion__body {
+  display: none;
+}/*# sourceMappingURL=accordion.css.map */
