--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -1,1 +1,571 @@
-@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-Thin.ttf);font-weight:100;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-ExtraLight.ttf);font-weight:200;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-Light.ttf);font-weight:300;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-Regular.ttf);font-weight:400;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-Medium.ttf);font-weight:500;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-SemiBold.ttf);font-weight:600;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-Bold.ttf);font-weight:700;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-ExtraBlack.ttf);font-weight:800;font-style:normal}@font-face{font-family:"Inter";src:url(../../fonts/static/Inter-Black.ttf);font-weight:900;font-style:normal}*{margin:0;padding:0;text-decoration:none}html{scroll-behavior:smooth}body{font-family:"Inter";font-style:normal}ul{list-style:none}button,input{border:0}button,a{cursor:pointer}p{margin:0}.logo{width:165px;height:34px}.icon{width:20px;height:20px}.video-container{width:100%;height:100%}.video{width:1100px;height:auto;border-radius:4px}.number-list{gap:18px;display:flex;padding-left:20px;flex-direction:column}.number-list__item{color:#232323;font-size:16px;font-weight:400;line-height:22px;padding-left:8px}.number-list__item::marker{color:#248fec;font-size:18px;font-weight:700;line-height:22px}.list-company{margin:10px 0 30px;gap:33px;display:flex;flex-wrap:wrap}.list-company__item{gap:15px;width:300px;display:flex;padding:20px;align-items:center;border-radius:2px;background:#fbfbfb}.list-company__item-img{width:60px;height:50px}.list-company__item-info{gap:5px;display:flex;flex-direction:column}.list-company__item-info__title{color:#232323;font-size:15px;font-weight:700;line-height:20px}.list-company__item-info__subtitle{color:#248fec;font-size:12px;font-weight:400;line-height:12px}.title__middle{font-size:35px;font-weight:700;line-height:45px;color:var(--black, #232323)}.title__middle span{color:#248fec}.title__big{width:785px;font-size:50px;font-weight:700;line-height:60px;color:var(--black, #232323)}.title__big span{color:#248fec}.list-social{gap:5px;width:100px;display:flex;align-items:center}.list-social__item{width:30px;height:30px}.list-social__item-img{width:100%;height:auto}.btn-collapse,.btn-read-more{display:flex;margin-top:20px;align-items:center;background:rgba(0,0,0,0)}.btn-collapse span,.btn-read-more span{font-size:13px;font-weight:400;line-height:11px;margin-right:5px;color:var(--deep-blue, #1E4D79)}.btn-collapse{display:none}.btn-collapse__img{transform:rotate(180deg)}.block-contact{gap:8px;color:#fff;display:flex;align-items:center;transition:color .5s ease}.block-contact:hover{color:#248fec}.block-contact__icon{width:18px;height:18px}.block-contact__icon-big{width:20px;height:20px}.block-contact__text-default{font-size:12px;font-weight:300;line-height:18px;color:#575757}.block-contact__text-dark,.block-contact__text-light{font-size:15px;font-weight:600;color:#232323}.block-contact__text-light{color:#fff}.btn{width:100%}.btn-blue{width:100%;padding:18px;color:#fff;font-size:16px;font-weight:600;line-height:24px;border-radius:8px;background-color:#248fec;box-shadow:0px 14px 24px 0px rgba(36,143,236,.18);transition:color .5s ease,background-color .5s ease}.btn-blue:hover{color:#232323;background-color:#fbe200}.btn-showMore{display:none}@media(max-width: 480px){.btn-showMore{display:block;width:100%;color:var(--black, #232323);text-align:center;font-size:14px;font-weight:600;line-height:14px;border-radius:4px;background:var(--yellow, #FBE200);padding:23px 0;margin-top:15px}}.accordion__header{display:flex;cursor:pointer;align-items:center;padding-right:22px;justify-content:space-between;background-color:rgba(0,0,0,0);transition:background-color .2s ease-out}.accordion__header::after{content:"";flex-shrink:0;width:1.25rem;height:1.25rem;margin-left:auto;background-size:1.25rem;background-repeat:no-repeat;transition:transform .2s ease-out;background-image:url(/images/service/arrow.svg)}.accordion__header:hover::after{filter:brightness(0) invert(1)}.accordion__content{cursor:default;padding:24px 20px 30px;background:#fff}.accordion__content__list{gap:20px;display:flex;flex-direction:column}.accordion__content__list__item{width:300px}.accordion__content__list__item-title{font-size:15px;font-weight:700;line-height:22px;color:#232323}.accordion__content__list__item-subtitle{font-size:12px;font-weight:400;line-height:18px;color:#575757}.accordion__content__list__item-link:hover .accordion__content__list__item-title{color:#248fec}.accordion__item_show .accordion__header::after,.accordion__item_slidedown .accordion__header::after{transform:rotate(-180deg)}.accordion__item:not(.accordion__item_show) .accordion__body{display:none}.footer{background:#152a53;padding:52px 0 30px}.footer__wrapper{display:flex;margin-bottom:35px !important}.footer__social-content{margin-right:100px}.footer__social-content-text{color:#fff;font-size:11px;line-height:11px;margin:30px 0 12px}.footer__nav-content{gap:70px;width:1010px;display:flex}.footer__nav-content-title{font-size:17px;font-weight:700;color:#fff;line-height:26px;margin-bottom:5px}.footer__nav-content-list{width:200px;display:flex;flex-direction:column}.footer__nav-content-list__item-link{margin-top:5px;font-size:14px;font-weight:400;line-height:24px;color:#fff}.footer__nav-content-mobile{gap:14px;margin:30px 0;display:none;flex-direction:column}.footer__nav-content-mobile__item-text{color:#fff;font-size:16px;font-weight:600;line-height:140%}.footer__nav-content-mobile__header{margin-top:14px;padding-bottom:16px;border-bottom:1px solid #4b4b4b}.footer__nav-content-mobile__content{margin-top:20px;gap:16px;display:flex;flex-direction:column}.footer__nav-content-mobile__content__item-link{color:#fff;font-size:14px;font-weight:400;line-height:140%}.footer__info-container{gap:93px;display:flex;padding:30px 0;margin-bottom:30px;border-top:1px solid #4b4b4b;border-bottom:1px solid #4b4b4b}.footer__info-container-title{width:765px;font-weight:400;font-size:12px;line-height:18px;color:#dadada}.footer__info-container-title a{text-decoration-line:underline;color:#248fec}.footer__subinfo-container{display:flex;justify-content:space-between}.footer__subinfo-container-title{font-size:12px;font-weight:400;color:#fff;line-height:11px}.footer__subinfo-container-title span{font-weight:700;font-size:14px;line-height:18px;margin-left:8px}.footer__contact{width:314px;margin-left:71px}.footer__contact__content{gap:10px;display:flex;flex-direction:column;align-items:flex-start}.footer__contact__content:nth-child(2){margin-top:20px}.footer__contact__content-title{margin:0;font-size:13px;font-weight:400;color:#fff;line-height:24px}.footer__contact__content-title span{font-weight:700}.footer__contact__login-btn{gap:5px;display:flex;margin-top:30px;align-items:center;border-radius:999px;background:#248fec;padding:8px 14px 8px 8px}.footer__contact__login-btn-text{font-size:13px;color:#fff;font-weight:600;line-height:13px}.footer__contact__login-btn--mobile{display:none}@media(max-width: 480px){.footer{padding:40px 0 20px}.footer__wrapper{flex-direction:column;margin-bottom:35px !important}.footer__nav-content{display:none}.footer__nav-content-mobile{display:flex}.footer__info-container{gap:0;flex-direction:column;padding:0;margin-bottom:21px;border-top:0;border-bottom:0}.footer__info-container-title{width:100%;padding:15px 0;border-top:1px solid #4b4b4b;border-bottom:1px solid #4b4b4b}.footer__info-container-title:last-child{border-top:none}.footer__subinfo-container{display:flex;justify-content:space-between}.footer__subinfo-container-title{font-size:10px;line-height:10px}.footer__subinfo-container-title span{font-size:11px;line-height:11px;margin-left:5px}.footer__contact{width:100%;margin-left:0}.footer__contact__login-btn--desctop{display:none}.footer__contact__login-btn--mobile{margin-top:0;display:flex}.footer__social-content{margin-right:0}.footer__social-content__inner{margin-top:20px;display:flex;justify-content:space-between;align-items:center}.footer__social-content-text{margin-top:0}}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-Thin.ttf);
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-ExtraLight.ttf);
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-Light.ttf);
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-Medium.ttf);
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-SemiBold.ttf);
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-Bold.ttf);
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-ExtraBlack.ttf);
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../fonts/static/Inter-Black.ttf);
+  font-weight: 900;
+  font-style: normal;
+}
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Inter";
+  font-style: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button,
+input {
+  border: 0;
+}
+
+button,
+a {
+  cursor: pointer;
+}
+
+p {
+  margin: 0;
+}
+
+.logo {
+  width: 165px;
+  height: 34px;
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
+}
+
+.video-container {
+  width: 100%;
+  height: 100%;
+}
+
+.video {
+  width: 1100px;
+  height: auto;
+  border-radius: 4px;
+}
+
+.number-list {
+  gap: 18px;
+  display: flex;
+  padding-left: 20px;
+  flex-direction: column;
+}
+.number-list__item {
+  color: #000000;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  padding-left: 8px;
+}
+.number-list__item::marker {
+  color: #248FEC;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.list-company {
+  margin: 10px 0 30px;
+  gap: 33px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.list-company__item {
+  gap: 15px;
+  width: 300px;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  border-radius: 2px;
+  background: #FBFBFB;
+}
+.list-company__item-img {
+  width: 60px;
+  height: 50px;
+}
+.list-company__item-info {
+  gap: 5px;
+  display: flex;
+  flex-direction: column;
+}
+.list-company__item-info__title {
+  color: #000000;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 20px;
+}
+.list-company__item-info__subtitle {
+  color: #248FEC;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 12px;
+}
+
+.title__middle {
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 45px;
+  color: var(--black, #232323);
+}
+.title__middle span {
+  color: #248FEC;
+}
+.title__big {
+  width: 785px;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 60px;
+  color: var(--black, #232323);
+}
+.title__big span {
+  color: #248FEC;
+}
+
+.list-social {
+  gap: 5px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+}
+.list-social__item {
+  width: 30px;
+  height: 30px;
+}
+.list-social__item-img {
+  width: 100%;
+  height: auto;
+}
+
+.btn-collapse,
+.btn-read-more {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  background: transparent;
+}
+.btn-collapse span,
+.btn-read-more span {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 11px;
+  margin-right: 5px;
+  color: var(--deep-blue, #1E4D79);
+}
+
+.btn-collapse {
+  display: none;
+}
+.btn-collapse__img {
+  transform: rotate(180deg);
+}
+
+.block-contact {
+  gap: 8px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  transition: color 0.5s ease;
+}
+.block-contact:hover {
+  color: #248FEC;
+}
+.block-contact__icon {
+  width: 18px;
+  height: 18px;
+}
+.block-contact__icon-big {
+  width: 20px;
+  height: 20px;
+}
+.block-contact__text-default {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 18px;
+  color: #575757;
+}
+.block-contact__text-dark, .block-contact__text-light {
+  font-size: 15px;
+  font-weight: 600;
+  color: #000000;
+}
+.block-contact__text-light {
+  color: #ffffff;
+}
+
+.btn {
+  width: 100%;
+}
+.btn-blue {
+  width: 100%;
+  padding: 18px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  border-radius: 8px;
+  background-color: #248FEC;
+  box-shadow: 0px 14px 24px 0px rgba(36, 143, 236, 0.18);
+  transition: color 0.5s ease, background-color 0.5s ease;
+}
+.btn-blue:hover {
+  color: #000000;
+  background-color: #FBE200;
+}
+
+.btn-showMore {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .btn-showMore {
+    display: block;
+    width: 100%;
+    color: var(--black, #232323);
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 14px;
+    border-radius: 4px;
+    background: var(--yellow, #FBE200);
+    padding: 23px 0;
+    margin-top: 15px;
+  }
+}
+.accordion__header {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  padding-right: 22px;
+  justify-content: space-between;
+  background-color: transparent;
+  transition: background-color 0.2s ease-out;
+}
+.accordion__header::after {
+  content: "";
+  flex-shrink: 0;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-left: auto;
+  background-size: 1.25rem;
+  background-repeat: no-repeat;
+  transition: transform 0.2s ease-out;
+  background-image: url(/images/service/arrow.svg);
+}
+.accordion__header:hover::after {
+  filter: brightness(0) invert(1);
+}
+.accordion__content {
+  cursor: default;
+  padding: 24px 20px 30px;
+  background: #ffffff;
+}
+.accordion__content__list {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.accordion__content__list__item {
+  width: 300px;
+}
+.accordion__content__list__item-title {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 22px;
+  color: #000000;
+}
+.accordion__content__list__item-subtitle {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #575757;
+}
+.accordion__content__list__item-link:hover .accordion__content__list__item-title {
+  color: #248FEC;
+}
+
+.accordion__item_show .accordion__header::after,
+.accordion__item_slidedown .accordion__header::after {
+  transform: rotate(-180deg);
+}
+
+.accordion__item:not(.accordion__item_show) .accordion__body {
+  display: none;
+}
+
+.footer {
+  background: #152A53;
+  padding: 52px 0 30px;
+}
+.footer__wrapper {
+  display: flex;
+  margin-bottom: 35px !important;
+}
+.footer__social-content {
+  margin-right: 100px;
+}
+.footer__social-content-text {
+  color: #ffffff;
+  font-size: 11px;
+  line-height: 11px;
+  margin: 30px 0 12px;
+}
+.footer__nav-content {
+  gap: 70px;
+  width: 1010px;
+  display: flex;
+}
+.footer__nav-content-title {
+  font-size: 17px;
+  font-weight: 700;
+  color: #ffffff;
+  line-height: 26px;
+  margin-bottom: 5px;
+}
+.footer__nav-content-list {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+}
+.footer__nav-content-list__item-link {
+  margin-top: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #ffffff;
+}
+.footer__nav-content-mobile {
+  gap: 14px;
+  margin: 30px 0;
+  display: none;
+  flex-direction: column;
+}
+.footer__nav-content-mobile__item-text {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 140%;
+}
+.footer__nav-content-mobile__header {
+  margin-top: 14px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #4B4B4B;
+}
+.footer__nav-content-mobile__content {
+  margin-top: 20px;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+}
+.footer__nav-content-mobile__content__item-link {
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 140%;
+}
+.footer__info-container {
+  gap: 93px;
+  display: flex;
+  padding: 30px 0;
+  margin-bottom: 30px;
+  border-top: 1px solid #4B4B4B;
+  border-bottom: 1px solid #4B4B4B;
+}
+.footer__info-container-title {
+  width: 765px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #DADADA;
+}
+.footer__info-container-title a {
+  text-decoration-line: underline;
+  color: #248FEC;
+}
+.footer__subinfo-container {
+  display: flex;
+  justify-content: space-between;
+}
+.footer__subinfo-container-title {
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
+  line-height: 11px;
+}
+.footer__subinfo-container-title span {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  margin-left: 8px;
+}
+.footer__contact {
+  width: 314px;
+  margin-left: 71px;
+}
+.footer__contact__content {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.footer__contact__content:nth-child(2) {
+  margin-top: 20px;
+}
+.footer__contact__content-title {
+  margin: 0;
+  font-size: 13px;
+  font-weight: 400;
+  color: #ffffff;
+  line-height: 24px;
+}
+.footer__contact__content-title span {
+  font-weight: 700;
+}
+.footer__contact__login-btn {
+  gap: 5px;
+  display: flex;
+  margin-top: 30px;
+  align-items: center;
+  border-radius: 999px;
+  background: #248FEC;
+  padding: 8px 14px 8px 8px;
+}
+.footer__contact__login-btn-text {
+  font-size: 13px;
+  color: #ffffff;
+  font-weight: 600;
+  line-height: 13px;
+}
+.footer__contact__login-btn--mobile {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .footer {
+    padding: 40px 0 20px;
+  }
+  .footer__wrapper {
+    flex-direction: column;
+    margin-bottom: 35px !important;
+  }
+  .footer__nav-content {
+    display: none;
+  }
+  .footer__nav-content-mobile {
+    display: flex;
+  }
+  .footer__info-container {
+    gap: 0;
+    flex-direction: column;
+    padding: 0;
+    margin-bottom: 21px;
+    border-top: 0;
+    border-bottom: 0;
+  }
+  .footer__info-container-title {
+    width: 100%;
+    padding: 15px 0;
+    border-top: 1px solid #4B4B4B;
+    border-bottom: 1px solid #4B4B4B;
+  }
+  .footer__info-container-title:last-child {
+    border-top: none;
+  }
+  .footer__subinfo-container {
+    display: flex;
+    justify-content: space-between;
+  }
+  .footer__subinfo-container-title {
+    font-size: 10px;
+    line-height: 10px;
+  }
+  .footer__subinfo-container-title span {
+    font-size: 11px;
+    line-height: 11px;
+    margin-left: 5px;
+  }
+  .footer__contact {
+    width: 100%;
+    margin-left: 0;
+  }
+  .footer__contact__login-btn--desctop {
+    display: none;
+  }
+  .footer__contact__login-btn--mobile {
+    margin-top: 0;
+    display: flex;
+  }
+  .footer__social-content {
+    margin-right: 0;
+  }
+  .footer__social-content__inner {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .footer__social-content-text {
+    margin-top: 0;
+  }
+}/*# sourceMappingURL=footer.css.map */
