--- a/styles/itc-slider/itc-slider.css
+++ b/styles/itc-slider/itc-slider.css
@@ -1,1 +1,209 @@
-.itc-slider{width:1660px;margin:0 auto;position:relative;border-radius:8px}.itc-slider__btns-container{width:105px;position:absolute;display:flex;bottom:60px;left:495px;gap:5px}.itc-slider__btn-icon{width:50px;height:50px}.itc-slider__btn-icon:hover{stroke:#fbe200}.itc-slider__btn-icon:hover circle{stroke:#fbe200}.itc-slider-wrapper{overflow:hidden}.itc-slider-items{display:flex;transition:transform .5s ease;will-change:transform}.itc-slider-transition-none{transition:none}.itc-slider-item{flex:0 0 100%;max-width:100%;user-select:none;will-change:transform;display:flex;position:relative}.itc-slider-item__left-block{position:absolute;top:0;left:0;width:640px;height:100%;border-radius:8px 0px 48px 8px;background:var(--main-blue, #248FEC);box-shadow:0px 4px 45px 0px rgba(36,143,236,.14)}.itc-slider-item__img{width:100%;height:auto;border-radius:8px;pointer-events:none}.itc-slider-item__title{color:#fff;font-size:37px;font-weight:700;line-height:47px;margin:70px 70px 0}.itc-slider-item__subtitle{color:#fff;font-size:18px;font-weight:400;line-height:30px;margin:0 70px 62px}.itc-slider-item__btn-more{font-size:14px;font-weight:600;line-height:14px;padding:16px 34px;border-radius:4px;background:#fbe200;margin:0 70px 20px;color:var(--black, #232323);box-shadow:0px 4px 45px 0px rgba(251,226,0,.25)}.itc-slider-item__btn-more:hover{background:#fff27e;box-shadow:0px 4px 45px 0px rgba(78,78,78,.45)}.itc-slider-btn{position:absolute;top:50%;display:flex;justify-content:center;align-items:center;width:50px;height:50px;transform:translateY(-50%);background:rgba(0,0,0,0)}.itc-slider-btn-hide{display:none}.itc-slider-btn-prev{left:0;margin-right:5px}.itc-slider-btn-next{right:0}.itc-slider-btn:hover,.itc-slider-btn:focus{outline:0}.itc-slider-indicators{position:absolute;bottom:60px;left:70px;z-index:15;display:flex;align-items:center;justify-content:center}.itc-slider-indicator{flex:0 1 auto;box-sizing:content-box;width:6px;height:6px;margin-right:4px;margin-left:4px;text-indent:-999px;background-color:#fff;background-clip:padding-box;border-top:15px solid rgba(0,0,0,0);border-bottom:15px solid rgba(0,0,0,0);cursor:pointer;border-radius:50%}.itc-slider-indicator-active{width:10px;height:10px;background-color:#fbe200;box-shadow:drop-shadow(0px 2px 18px rgba(251, 226, 0, 0.5))}@media(max-width: 480px){.itc-slider{width:100%}.itc-slider-indicators{display:none}.itc-slider__btns-container{left:auto;right:15px;bottom:38px;height:50px}.itc-slider-item{flex-direction:column}.itc-slider-item__left-block{position:static;width:auto;height:auto;order:1;border-radius:0;padding:25px 35px 38px 15px}.itc-slider-item__img{height:200px;object-fit:cover;order:0;border-radius:0}.itc-slider-item__title{font-size:24px;font-weight:700;line-height:34px;margin-bottom:5px !important;margin:0}.itc-slider-item__subtitle{font-size:15px;font-weight:400;line-height:24px;margin:0;margin-bottom:32px !important}.itc-slider-item__btn-more{display:block;margin:0;text-align:center;width:147px;box-sizing:border-box}}
+.itc-slider {
+  width: 1660px;
+  margin: 0 auto;
+  position: relative;
+  border-radius: 8px;
+}
+.itc-slider__btns-container {
+  width: 105px;
+  position: absolute;
+  display: flex;
+  bottom: 60px;
+  left: 495px;
+  gap: 5px;
+}
+.itc-slider__btn-icon {
+  width: 50px;
+  height: 50px;
+}
+.itc-slider__btn-icon:hover {
+  stroke: #FBE200;
+}
+
+.itc-slider__btn-icon:hover circle {
+  stroke: #FBE200;
+}
+
+.itc-slider-wrapper {
+  overflow: hidden;
+}
+
+.itc-slider-items {
+  display: flex;
+  transition: transform 0.5s ease;
+  will-change: transform;
+}
+
+.itc-slider-transition-none {
+  transition: none;
+}
+
+.itc-slider-item {
+  flex: 0 0 100%;
+  max-width: 100%;
+  user-select: none;
+  will-change: transform;
+  display: flex;
+  position: relative;
+}
+.itc-slider-item__left-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 640px;
+  height: 100%;
+  border-radius: 8px 0px 48px 8px;
+  background: var(--main-blue, #248FEC);
+  box-shadow: 0px 4px 45px 0px rgba(36, 143, 236, 0.14);
+}
+.itc-slider-item__img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  pointer-events: none;
+}
+.itc-slider-item__title {
+  color: #FFF;
+  font-size: 37px;
+  font-weight: 700;
+  line-height: 47px;
+  margin: 70px 70px 0;
+}
+.itc-slider-item__subtitle {
+  color: #FFF;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 0 70px 62px;
+}
+.itc-slider-item__btn-more {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 14px;
+  padding: 16px 34px;
+  border-radius: 4px;
+  background: #FBE200;
+  margin: 0 70px 20px;
+  color: var(--black, #232323);
+  box-shadow: 0px 4px 45px 0px rgba(251, 226, 0, 0.25);
+}
+.itc-slider-item__btn-more:hover {
+  background: #FFF27E;
+  box-shadow: 0px 4px 45px 0px rgba(78, 78, 78, 0.45);
+}
+
+.itc-slider-btn {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  transform: translateY(-50%);
+  background: transparent;
+}
+
+.itc-slider-btn-hide {
+  display: none;
+}
+
+.itc-slider-btn-prev {
+  left: 0;
+  margin-right: 5px;
+}
+
+.itc-slider-btn-next {
+  right: 0;
+}
+
+.itc-slider-btn:hover,
+.itc-slider-btn:focus {
+  outline: 0;
+}
+
+.itc-slider-indicators {
+  position: absolute;
+  bottom: 60px;
+  left: 70px;
+  z-index: 15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.itc-slider-indicator {
+  flex: 0 1 auto;
+  box-sizing: content-box;
+  width: 6px;
+  height: 6px;
+  margin-right: 4px;
+  margin-left: 4px;
+  text-indent: -999px;
+  background-color: #FFF;
+  background-clip: padding-box;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.itc-slider-indicator-active {
+  width: 10px;
+  height: 10px;
+  background-color: #FBE200;
+  box-shadow: drop-shadow(0px 2px 18px rgba(251, 226, 0, 0.5));
+}
+
+@media (max-width: 480px) {
+  .itc-slider {
+    width: 100%;
+  }
+  .itc-slider-indicators {
+    display: none;
+  }
+  .itc-slider__btns-container {
+    left: auto;
+    right: 15px;
+    bottom: 38px;
+    height: 50px;
+  }
+  .itc-slider-item {
+    flex-direction: column;
+  }
+  .itc-slider-item__left-block {
+    position: static;
+    width: auto;
+    height: auto;
+    order: 1;
+    border-radius: 0;
+    padding: 25px 35px 38px 15px;
+  }
+  .itc-slider-item__img {
+    height: 200px;
+    object-fit: cover;
+    order: 0;
+    border-radius: 0;
+  }
+  .itc-slider-item__title {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 34px;
+    margin-bottom: 5px !important;
+    margin: 0;
+  }
+  .itc-slider-item__subtitle {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+    margin: 0;
+    margin-bottom: 32px !important;
+  }
+  .itc-slider-item__btn-more {
+    display: block;
+    margin: 0;
+    text-align: center;
+    width: 147px;
+    box-sizing: border-box;
+  }
+}/*# sourceMappingURL=itc-slider.css.map */
